QS-1589: Create OwnUser Answers Page WIP (1/2)

--- a/src/js/components/ui/Button/Button.scss
+++ b/src/js/components/ui/Button/Button.scss
@@ -33,5 +33,22 @@
     &:disabled {
       cursor: default;
     }
+
+    &.small {
+      width: 180px;
+      height: 40px;
+      line-height: 38px;
+    }
+  }
+  &.left {
+    text-align: left;
+  }
+
+  &.center {
+    text-align: center;
+  }
+
+  &.right {
+    text-align: right;
   }
 }
