--- a/src/js/components/ui/RoundedIcon/RoundedIcon.scss
+++ b/src/js/components/ui/RoundedIcon/RoundedIcon.scss
@@ -43,4 +43,13 @@
       line-height: 32px;
     }
   }
+  &.xx-small {
+    height: 25px;
+    width: 25px;
+
+    .icon {
+      font-size: 25px;
+      line-height: 25px;
+    }
+  }
 }
