--- a/src/scss/pages/chat-threads.scss
+++ b/src/scss/pages/chat-threads.scss
@@ -1,11 +1,16 @@
 @import '../_partials/colors';
 
-body #root .App .views .view.chat-threads-view {
-  background: $white-background;
+.chat-threads-view {
+  background: $background;
   color: $gray-main-text;
   text-align: left;
+  height: 100%;
 
   .chat-threads-wrapper {
-    min-height: 100vh;
+    height: calc(100% - 100px);
+    h4 {
+      font-weight: 600;
+      margin-left: 20px;
+    }
   }
 }
