--- a/src/js/components/ui/RoundedIcon/RoundedIcon.scss
+++ b/src/js/components/ui/RoundedIcon/RoundedIcon.scss
@@ -48,8 +48,17 @@
     width: 25px;
 
     .icon {
-      font-size: 25px;
-      line-height: 25px;
+      font-size: 18px;
+      line-height: 26px;
+      font-weight: bold;
+    }
+  }
+  &.answer {
+    height: 35px;
+    width: 35px;
+    .icon {
+      font-size: 24px;
+      line-height: 35px;
     }
   }
 }
