--- a/src/js/components/OwnUser/EditProfileCategory.scss
+++ b/src/js/components/OwnUser/EditProfileCategory.scss
@@ -3,7 +3,9 @@
 .frame {
   width: 91%;
   border-radius: 8px;
-  border: 1px solid #f0f1fa;
   background-color: $white;
   color: #615acb;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 4.5%;
 }
