--- a/src/js/components/ui/FrameCollapsible/FrameCollapsible.scss
+++ b/src/js/components/ui/FrameCollapsible/FrameCollapsible.scss
@@ -12,11 +12,11 @@
       display: inline-block;
       padding: 3px 3%;
       width: 69%;
+      color: #615acb;
     }
+
     .arrow {
       display: inline-block;
-      font-weight: bold;
-      padding: 3px 3%;
       text-align: right;
       width: 19%;
     }
