QS-1593: Css fixes

--- a/src/js/components/ui/InputSelectSingle/InputSelectSingle.scss
+++ b/src/js/components/ui/InputSelectSingle/InputSelectSingle.scss
@@ -23,8 +23,7 @@
   -webkit-align-items: center;
   align-items: center;
   margin: 5px;
-  max-width: 90%;
-  width: 200px;
+  width: 90%;
   position: relative;
 
   .open {
