--- a/src/js/components/profile/edit/BirthdayEdit/BirthdayEdit.scss
+++ b/src/js/components/profile/edit/BirthdayEdit/BirthdayEdit.scss
@@ -10,12 +10,6 @@
   display: inline-block;
 }
 
-.select{
-  width: 60%;
-  height: 20px;
-  color: #2b3857;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 19px;
-  display: inline-block;
+.wrapper {
+  display: flex;
 }
