--- a/src/js/pages/OwnUser/AboutMePage.scss
+++ b/src/js/pages/OwnUser/AboutMePage.scss
@@ -10,10 +10,25 @@
   width: 100%;
 }
 
+.center-line{
+  width: 100%;
+  display: flex;
+}
+
 .top-data {
   text-align: left;
   padding-left: 10%;
   padding-top: 5%;
+  width: 70%;
+}
+
+.edit-link {
+  width: 20%;
+  height: 20px;
+  color: $links;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
 }
 
 .natural-category {
