QS-1603: ProposalDetailPage (1/2) && ProposalDetailMatchesPage (1/2)

--- a/src/js/components/ui/SelectCollapsible/SelectCollapsible.scss
+++ b/src/js/components/ui/SelectCollapsible/SelectCollapsible.scss
@@ -25,6 +25,7 @@
     .option {
       color: $gray-secondary-text;
       margin: 8px 0;
+      text-transform: capitalize;
 
       &.option-selected {
         cursor: default;
