QS-1602: OwnProposalsPage finished only missing number of matches

--- a/src/js/components/Proposal/OwnProposalCard/OwnProposalCard.scss
+++ b/src/js/components/Proposal/OwnProposalCard/OwnProposalCard.scss
@@ -66,6 +66,7 @@
       position: absolute;
       right: 16px;
       top: 16px;
+      font-size: 40px;
     }
     .user-data {
       height: 60px;
