--- a/src/scss/pages/proposals/edit/features-page.scss
+++ b/src/scss/pages/proposals/edit/features-page.scss
@@ -1,21 +1,79 @@
 @import '../../../_partials/colors';
 
-body #root .App .views .view.proposals-experience-features-view {
+body #root .App .views .view.proposal-preview-view {
   background-color: $background-white;
-  color: $gray-main-text;
+  color: $text;
   z-index: 0;
 
-  .proposals-experience-features-wrapper {
-    color: $gray-secondary-text;
+  .proposal-preview-wrapper {
+    .proposal-floating-icon-container {
+      position: absolute;
+      z-index: 1;
+      right: 24px;
+      top: 8px;
+      font-size: 45px;
+    }
 
     h2 {
       padding: 0 24px;
-      text-align: center;
+    }
+    h2, p {
+      font-weight: normal;
+    }
+
+    .image-wrapper {
+      position: relative;
+      color: white;
+      img {
+        width: 100%;
+      }
+      .bottom-left {
+        position: absolute;
+        bottom: 5px;
+      }
+    }
+
+    .content-wrapper {
+      padding: 0 24px;
+      text-align: left;
+
+      .category {
+        font-size: 14px;
+        font-weight: bold;
+      }
+
+      .information-wrapper {
+        margin-bottom: 24px;
+
+        .text-wrapper {
+          display: inline-block;
+          text-align: left;
+          vertical-align: top;
+          width: 88%;
+
+          .title {
+            font-weight: bold;
+            margin-bottom: 8px;
+            text-align: left;
+            color: $text;
+          }
+          .small {
+            font-size: 14px;
+          }
+        }
+      }
+      .filters-wrapper {
+        padding: 16px;
+        background: $background-darken;
+      }
     }
   }
+}
 
-  .warning-container {
-    margin: 2.5%;
-    display: flex;
-  }
+.rounded-icon-wrapper {
+  text-align: center;
+  display: inline-block;
+  margin-right: 4%;
+  width: 8%;
+  vertical-align: top;
 }
