Fix back route when user is not logged in and image size in inputselectimage

--- a/src/js/components/RegisterFields/InputSelectImage/InputSelectImage.scss
+++ b/src/js/components/RegisterFields/InputSelectImage/InputSelectImage.scss
@@ -40,6 +40,7 @@
           -moz-border-radius: 50%;
           -webkit-border-radius: 50%;
           width: 84px;
+          height: 100%;
         }
       }
       .selected-item {
