Remove Root Proposal old routes. AnswersPage added scss and refactored render. QuestionsStatsPage, QuestionsEditStatsPage and QuestionOtherStatsPage scss and render fixed.

--- a/src/scss/pages/other-user/answers.scss
+++ b/src/scss/pages/other-user/answers.scss
@@ -78,6 +78,7 @@ body #root .App .views .view.other-user-answers-view {
             overflow: hidden;
             text-overflow: ellipsis;
             color: $links;
+            cursor: pointer;
           }
         }
       }
