--- a/src/js/components/ui/QuestionPartialMatch/QuestionPartialMatch.scss
+++ b/src/js/components/ui/QuestionPartialMatch/QuestionPartialMatch.scss
@@ -64,6 +64,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         color: $links;
+        cursor: pointer;
       }
     }
   }
