Replace proposal old icons by new icons

--- a/src/scss/pages/own-proposals.scss
+++ b/src/scss/pages/own-proposals.scss
@@ -8,7 +8,7 @@
   .own-proposals-wrapper {
     // margin-top: 16px;
     min-height: 100vh;
-    //padding: 0 16px;
+    //padding: 0 16px;f
 
     .pre-card-title {
       display: inline-block;
