Fix all topNavBarLeft button navigation

--- a/src/scss/pages/other-user/proposals.scss
+++ b/src/scss/pages/other-user/proposals.scss
@@ -1,6 +1,6 @@
 @import '../../_partials/colors';
 
-body #root .App .views .view.user-answers-view {
+body #root .App .views .view.other-user-proposals-view {
   background-color: $background;
   color: $gray-main-text;
   // text-align: center;
