Fix Availability scss and About me like icon

--- a/src/scss/pages/proposals/edit/availability-page.scss
+++ b/src/scss/pages/proposals/edit/availability-page.scss
@@ -1,25 +1,17 @@
 @import '../../../_partials/colors';
 
-body #root .App .views .view.proposal-preview-view {
+body #root .App .views .view.proposals-availability-view {
   background-color: $background-white;
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
 
-  .proposal-preview-wrapper {
+  .proposals-availability-wrapper {
     h2 {
       padding: 0 24px;
     }
 
-    .proposal-floating-icon-container {
-      position: absolute;
-      z-index: 1;
-      right: 24px;
-      top: 8px;
-      font-size: 45px;
-    }
-
-    .proposals-project-availability-frame-wrapper {
+    .proposals-availability-frame-wrapper {
       cursor: pointer;
       .rounded-icon-wrapper {
         text-align: center;
