Fix scss ProposalPreviewPage

--- a/src/scss/pages/proposals/edit/preview-page.scss
+++ b/src/scss/pages/proposals/edit/preview-page.scss
@@ -6,6 +6,15 @@ body #root .App .views .view.proposals-preview-view {
   z-index: 0;
 
   .proposals-preview-wrapper {
+
+    .proposal-floating-icon-container {
+      position: absolute;
+      z-index: 1;
+      right: 24px;
+      top: 8px;
+      font-size: 45px;
+    }
+
     h2 {
       padding: 0 24px;
     }
