QS-1610: Implement every new icon and fix some answer question issue

--- a/src/js/components/ui/QuestionMatch/QuestionMatch.scss
+++ b/src/js/components/ui/QuestionMatch/QuestionMatch.scss
@@ -51,7 +51,7 @@
       display: inline-block;
       //margin-left: 6px;
       vertical-align: super;
-      width: 80%;
+      width: 70%;
 
       .answer {
         font-size: 14px;
@@ -65,6 +65,11 @@
         text-overflow: ellipsis;
         color: $links;
       }
+    }
+
+    .answer-icon {
+      display: inline-block;
+      width: 10%;
     }
   }
 }
