--- a/src/js/components/ui/ProposalIcon/ProposalIcon.scss
+++ b/src/js/components/ui/ProposalIcon/ProposalIcon.scss
@@ -20,7 +20,7 @@
     height: 75px;
     width: 75px;
 
-    .icon {
+    span {
       font-size: 75px;
       line-height: 75px;
     }
@@ -29,7 +29,7 @@
     height: 50px;
     width: 50px;
 
-    .icon {
+    span {
       font-size: 50px;
       line-height: 50px;
     }
@@ -38,7 +38,7 @@
     height: 40px;
     width: 40px;
 
-    .icon {
+    span {
       font-size: 40px;
       line-height: 40px;
     }
@@ -47,7 +47,7 @@
     height: 32px;
     width: 32px;
 
-    .icon {
+    span {
       font-size: 24px;
       line-height: 32px;
     }
@@ -56,7 +56,7 @@
     height: 25px;
     width: 25px;
 
-    .icon {
+    span {
       font-size: 18px;
       line-height: 26px;
       font-weight: bold;
@@ -65,7 +65,7 @@
   &.answer {
     height: 35px;
     width: 35px;
-    .icon {
+    span {
       font-size: 24px;
       line-height: 35px;
     }
