--- a/src/js/components/ui/CarouselContinuous/CarouselContinuous.scss
+++ b/src/js/components/ui/CarouselContinuous/CarouselContinuous.scss
@@ -3,7 +3,7 @@
 .carouselcontinuous {
   display: flex;
   flex-wrap: nowrap;
-  overflow-x: scroll;
+  //overflow-x: scroll;
 
   .item {
     flex-shrink: 0;
