Lavado de cara 1

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -4,6 +4,8 @@ $dark-purple: #151232;
 $dark-purple-translucent: rgba(21, 18, 50, 0.5);
 $dark-purple-semi-translucent: rgba(21, 18, 50, 0.9);
 $purple: #2d205f;
+$white: #ffffff;
+$ocean-blue: #2b3758;
 $dark-blue: #1b1843;
 $light-blue: #6abeee;
 $dark-gray: #1d2029;
@@ -48,3 +50,8 @@ $material-deep-orange: #FF5722;
 $material-brown: #795548;
 $material-grey: #9E9E9E;
 $material-blue-grey: #607D8B;
+
+$text-prin: $ocean-blue;
+$page-bg: $white;
+
+$navbar-bg: $white;
