--- a/src/scss/_partials/_theme.color.scss
+++ b/src/scss/_partials/_theme.color.scss
@@ -92,7 +92,7 @@ i.icon-bars.theme-nekuno,
 }
 .theme-nekuno a,
 .theme-nekuno .item-link.list-button {
-  color: $deep-purple;
+  color: $ocean-blue;
 }
 .theme-nekuno .tabbar a,
 .tabbar.theme-nekuno a,
