Poner fondo blanco al panel

--- a/src/scss/_partials/_panel.scss
+++ b/src/scss/_partials/_panel.scss
@@ -4,19 +4,19 @@ body.panels-3d.with-panel-left-reveal .views {
 }
 
 .panel {
-	background: $dark-blue;
-	color: #fff;
+	background: $white;
+	// color: #fff;
 	width: 100%;
 
 	.content-block {
-		color: #fff;
+		// color: #fff;
 	}
 	.title {
 		font-size: 1.785714286em;
 		text-align: center;
 	}
 	a {
-		color: #fff;
+		// color: #fff;
 	}
 	.top-menu {
 		margin-top: 12px;
