--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -53,7 +53,7 @@ body {
 	-webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
 	-webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
 
-	background: $dark-gray;
+	background: $white;
 	font-family: $nekuno-font;
 	font-size: 10px;
 	margin: auto;
