gallery: Cambiar fondo a los botones

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -33,7 +33,7 @@ body #root .App .views .view .page.gallery-page {
         }
       }
       .profile-photo-text {
-        background: $deep-purple;
+        background: $white;
         font-size: 0.8em;
         height: 20px;
         margin-top: -20px;
@@ -56,7 +56,7 @@ body #root .App .views .view .page.gallery-page {
       }
       
       &.import-album-wrapper {
-        background: $deep-purple;
+        background: $white;
         position: relative;
         vertical-align: top;
 
