--- a/src/scss/_partials/_button-floating.scss
+++ b/src/scss/_partials/_button-floating.scss
@@ -3,10 +3,10 @@
 	border-radius: 50%;
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
-	box-shadow: 0 3px 6px 4px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0 3px 6px 4px rgba(0,0,0,0.6);
-	-webkit-box-shadow: 0 3px 6px 4px rgba(0,0,0,0.6);
-	-o-box-shadow: 0 3px 6px 4px rgba(0,0,0,0.6);
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	-o-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 	color: #fff;
 	cursor: pointer;
 	position: fixed;
