En los filtros, arreglar color de la línea que 'tapa'

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -58,7 +58,7 @@ body #root .App .views .view .page.create-thread-page  {
       position: absolute;
     }
     .opposite-vertical-line {
-      border-left: 6px solid $dark-purple;
+      border-left: 6px solid $page-bg;
       margin-top: -22px;
       height: 285px;
       margin-left: 5px;
