--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -198,7 +198,7 @@ body {
 						height: auto;
 
 						#page-content {
-							margin: 60px auto 0 auto;
+							margin: $navbar-hg auto 0 auto;
 							width: 85%;
 
 							.sub-title {
