--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -87,7 +87,8 @@ body #root .App .views .view .page.other-user-page {
       }
     }
     .profile-data-list {
-      margin: 30px 7.5% 0 7.5%;
+      margin: 30px 32px 0;
+      font-size: 14px;
 
       .profile-category {
         width: 200%;
