QS-1650: Corregir rutas a assets en SCSS

--- a/src/scss/pages/register-question-landing.scss
+++ b/src/scss/pages/register-question-landing.scss
@@ -10,7 +10,7 @@ body #root .App .views .view .page.register-question-landing-page {
     }
 
     #register-question-landing-image {
-      background: url('img/register-questions-landing-transparent.png');
+      background: url('../img/register-questions-landing-transparent.png');
       background-size: 100% auto;
       background-repeat: no-repeat;
       height: 300px;
