--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -598,7 +598,7 @@ body #root .App .views .view.home-view {
 // Default pixel ratio (1)
 @media only screen and (max-width: 320px) {
   body #root .App .view.home-view .nekuno-logo-wrapper .nekuno-logo {
-    background: url('img/logo-160x84.png') no-repeat;
+    background: url('../img/logo-160x84.png') no-repeat;
     width: 160px;
   }
   body #root .App .views .view.home-view .swiper-container .swiper-slide {
@@ -625,15 +625,15 @@ body #root .App .views .view.home-view {
   }
 
   body #root .App .page#login-1-image {
-    background: url('img/login/1-320x569.jpg') no-repeat center;
+    background: url('../img/login/1-320x569.jpg') no-repeat center;
     background-size: 320px auto !important;
   }
   body #root .App .page#login-2-image {
-    background: url('img/login/2-320x569.jpg') no-repeat center;
+    background: url('../img/login/2-320x569.jpg') no-repeat center;
     background-size: 320px auto !important;
   }
   body #root .App .page#login-3-image {
-    background: url('img/login/3-320x569.jpg') no-repeat center;
+    background: url('../img/login/3-320x569.jpg') no-repeat center;
     background-size: 320px auto !important;
   }
 }
@@ -722,7 +722,7 @@ body #root .App .views .view.home-view {
 
 @media only screen and (min-width: 321px) and (max-width: 480px) {
   .nekuno-logo {
-    background: url('img/logo-160x84.png') no-repeat;
+    background: url('../img/logo-160x84.png') no-repeat;
     width: 160px;
   }
   body #root .App .views .view.home-view {
@@ -761,15 +761,15 @@ body #root .App .views .view.home-view {
   }
 
   body #root .App .page#login-1-image {
-    background: url('img/login/1-480x854.jpg') no-repeat center;
+    background: url('../img/login/1-480x854.jpg') no-repeat center;
     background-size: 480px auto !important;
   }
   body #root .App .page#login-2-image {
-    background: url('img/login/2-480x854.jpg') no-repeat center;
+    background: url('../img/login/2-480x854.jpg') no-repeat center;
     background-size: 480px auto !important;
   }
   body #root .App .page#login-3-image {
-    background: url('img/login/3-480x854.jpg') no-repeat center;
+    background: url('../img/login/3-480x854.jpg') no-repeat center;
     background-size: 480px auto !important;
   }
 }
@@ -796,19 +796,19 @@ body #root .App .views .view.home-view {
   }
 
   body #root .App .view .nekuno-logo {
-    background: url('img/logo-250x132.png') no-repeat;
+    background: url('../img/logo-250x132.png') no-repeat;
     width: 175px;
   }
   body #root .App .page#login-1-image {
-    background: url('img/login/1-750x1334.jpg') no-repeat;
+    background: url('../img/login/1-750x1334.jpg') no-repeat;
     background-size: 750px auto;
   }
   body #root .App .page#login-2-image {
-    background: url('img/login/2-750x1334.jpg') no-repeat;
+    background: url('../img/login/2-750x1334.jpg') no-repeat;
     background-size: 750px auto;
   }
   body #root .App .page#login-3-image {
-    background: url('img/login/3-750x1334.jpg') no-repeat;
+    background: url('../img/login/3-750x1334.jpg') no-repeat;
     background-size: 750px auto;
   }
 }
@@ -820,44 +820,44 @@ body #root .App .views .view.home-view {
 
   @media only screen and (max-width: 212px) {
     .nekuno-logo {
-      background: url('img/logo-107x56.png') no-repeat;
+      background: url('../img/logo-107x56.png') no-repeat;
     }
     body #root .App .page#login-1-image {
-      background: url('img/login/1-320x569.jpg') no-repeat;
+      background: url('../img/login/1-320x569.jpg') no-repeat;
     }
     body #root .App .page#login-2-image {
-      background: url('img/login/2-320x569.jpg') no-repeat;
+      background: url('../img/login/2-320x569.jpg') no-repeat;
     }
     body #root .App .page#login-3-image {
-      background: url('img/login/3-320x569.jpg') no-repeat;
+      background: url('../img/login/3-320x569.jpg') no-repeat;
     }
   }
   @media only screen and (min-width: 213px) and (max-width: 320px) {
     .nekuno-logo {
-      background: url('img/logo-160x84.png') no-repeat;
+      background: url('../img/logo-160x84.png') no-repeat;
     }
     body #root .App .page#login-1-image {
-      background: url('img/login/1-480x854.jpg') no-repeat;
+      background: url('../img/login/1-480x854.jpg') no-repeat;
     }
     body #root .App .page#login-2-image {
-      background: url('img/login/2-480x854.jpg') no-repeat;
+      background: url('../img/login/2-480x854.jpg') no-repeat;
     }
     body #root .App .page#login-3-image {
-      background: url('img/login/3-480x854.jpg') no-repeat;
+      background: url('../img/login/3-480x854.jpg') no-repeat;
     }
   }
   @media only screen and (min-width: 321px) {
     .nekuno-logo {
-      background: url('img/logo-250x132.png') no-repeat;
+      background: url('../img/logo-250x132.png') no-repeat;
     }
     body #root .App .page#login-1-image {
-      background: url('img/login/1-750x1334.jpg') no-repeat;
+      background: url('../img/login/1-750x1334.jpg') no-repeat;
     }
     body #root .App .page#login-2-image {
-      background: url('img/login/2-750x1334.jpg') no-repeat;
+      background: url('../img/login/2-750x1334.jpg') no-repeat;
     }
     body #root .App .page#login-3-image {
-      background: url('img/login/3-750x1334.jpg') no-repeat;
+      background: url('../img/login/3-750x1334.jpg') no-repeat;
     }
   }
 }
@@ -869,30 +869,30 @@ body #root .App .views .view.home-view {
 
   @media only screen and (max-width: 240px) {
     .nekuno-logo {
-      background: url('img/logo-160x84.png') no-repeat;
+      background: url('../img/logo-160x84.png') no-repeat;
     }
     body #root .App .page#login-1-image {
-      background: url('img/login/1-480x854.jpg') no-repeat;
+      background: url('../img/login/1-480x854.jpg') no-repeat;
     }
     body #root .App .page#login-2-image {
-      background: url('img/login/2-480x854.jpg') no-repeat;
+      background: url('../img/login/2-480x854.jpg') no-repeat;
     }
     body #root .App .page#login-3-image {
-      background: url('img/login/3-480x854.jpg') no-repeat;
+      background: url('../img/login/3-480x854.jpg') no-repeat;
     }
   }
   @media only screen and (min-width: 241px) {
     .nekuno-logo {
-      background: url('img/logo-250x132.png') no-repeat;
+      background: url('../img/logo-250x132.png') no-repeat;
     }
     body #root .App .page#login-1-image {
-      background: url('img/login/1-750x1334.jpg') no-repeat;
+      background: url('../img/login/1-750x1334.jpg') no-repeat;
     }
     body #root .App .page#login-2-image {
-      background: url('img/login/2-750x1334.jpg') no-repeat;
+      background: url('../img/login/2-750x1334.jpg') no-repeat;
     }
     body #root .App .page#login-3-image {
-      background: url('img/login/3-750x1334.jpg') no-repeat;
+      background: url('../img/login/3-750x1334.jpg') no-repeat;
     }
   }
 }
