--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -51,6 +51,10 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	font-style: normal;
 }
 
+.mdi::before {
+	font-size: 1.2em;
+}
+
 [class^="icon-"], [class*=" icon-"] {
 	/* use !important to prevent issues with browser extensions that change fonts */
 	font-family: 'Nekuno Icons' !important;
