--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -18,6 +18,20 @@ body #root .App .views .view .page.discover-page {
     .edit-thread-button {
       margin: 20px auto;
       text-align: center;
+      
+      button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        box-sizing: border-box;
+        height: 40px;
+        width: 180px;
+      }
+      
+      .text {
+        line-height: 1;
+        padding-left: 8px;
+      }
     }
 
     .user-list {
