--- a/src/scss/_partials/_text-checkboxes.scss
+++ b/src/scss/_partials/_text-checkboxes.scss
@@ -24,12 +24,12 @@
   }
 
   select {
-    background: $dark-purple;
+    background: $deep-purple-translucent;
     border: 1px solid #fff;
     border-radius: 16px;
     -moz-border-radius: 16px;
     -webkit-border-radius: 16px;
-    color: #fff;
+    color: #text-prin;
     cursor: pointer;
     text-align-last: center;
   }
