--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -2,6 +2,7 @@
 	text-align: center;
 	vertical-align: top;
 	z-index: 100;
+	border-radius: $card-border-radius;
 
 	.card-header {
 		display:block;
@@ -126,7 +127,7 @@
 				width: 100%;
 			}
 			.image img {
-				border-radius: 2px 2px 0 0;
+				border-radius: $card-border-radius $card-border-radius 0 0;
 				width: 100%;
 				vertical-align: middle;
 			}
